[java] use fixed thread pool